feat: Add secret.yaml to gatus resources

--- a/clusters/home/apps/gatus/secret.yaml
+++ b/clusters/home/apps/gatus/secret.yaml
@@ -1,9 +1,28 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gatus
+    name: gatus
 type: Opaque
 stringData:
-  username: pacholoamit.tech@gmail.com
-  password: xsmtpsib-bf1833697c4b05d315b25fd1861145f128275b1574e37b60187cdbc5f451781f-8KAzW91DNCMGvrpj
-  
+    username: ENC[AES256_GCM,data:v2SXrgrUWYCs6EkqDmrruUQfbBYL0VNTDog=,iv:D8my6h5aOXLlIZz07yRh9NpUvg8ozpksGFQo4ZO005I=,tag:KL76937h+dp8oSQx71MSZQ==,type:str]
+    password: ENC[AES256_GCM,data:7v6luMcLI5OFW1s3DG0FgMW3WdoJbzWA5DiS9X9Q0nCF9+btXw2J+LtglVjMmKtubRplDI2joivkzrmyLm/d2I8AimrG91imXA6b39cRex1wBZgJxrw5VLx0,iv:09m7QWuxxblR7315oOHQd7sXvCCm9G6grrXXGng+ruc=,tag:q+PNvzvfvM2j85PbFmrgbA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4dEpkZFVyYTRaNWhnM3lr
+            OVNvNU5SQzM1VHZ5eDNvSDNXV1FaK2JlekZJClVSVzErSkFyQWl0cFVXUXE1RVJW
+            WmRSUVBmMStkNWFRQWwvN0c0NitYZlEKLS0tIDZReVluOEtQbkNBR0pHWTNyNmln
+            YkZybEFkNnZEeVptUmlxTFhvaVIrbjAK8IQ0avWQsYNaqaDBlEnWb3J3DGWQWcgS
+            PabeYThFralRBfmROB0DBz5qqlypibM/BpitnUMswA33XMCSVn/IdQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-04-03T12:06:39Z"
+    mac: ENC[AES256_GCM,data:yDJPMcmgxOjzKo6J9j0s44tDteKEnYApBlg8s009W9BxuFi3kcIoyq3XB5/vF1VxqJQ9rVSePrTGcKHUBUABTel4sjavb0V5XxLg3d33WJivGC6bVcanXpKz+C+wIXm9NsPuelkaGyKmWB4CypLBtcQnpWBkOvGkb5ntJ8WOchg=,iv:JlXFkilWwJuJ1lxJ6WSWTvFQXESz0Rra3vxfanCV8SI=,tag:1ZgTg2e9i4F9LCXskPRVwA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
