--- a/clusters/home/apps/gatus/release.yaml
+++ b/clusters/home/apps/gatus/release.yaml
@@ -56,13 +56,6 @@ spec:
         existingSecret: gatus
     secrets: true
     config:
-      endpoints:
-        - name: Homelab Dashboard
-          group: Apps/Services
-          url: https://homelab.pacholoamit.com
-          interval: 60s
-          conditions:
-            - "[STATUS] == 200"
       alerting:
         email:
           from: "uptime@pacholoamit.com"
@@ -73,3 +66,12 @@ spec:
           to: "pacholoamit.tech@gmail.com"
           client:
             insecure: false
+
+      endpoints:
+        - name: Homelab Dashboard
+          group: Apps/Services
+          url: https://homelab.pacholoamit.com
+          interval: 60s
+          conditions:
+            - "[STATUS] == 200"
+            - "[Body] == "pat(*<title>Homepage</title>*)"
