style: Remove unnecessary comment on healthcheck condition

--- a/clusters/home/apps/gatus/release.yaml
+++ b/clusters/home/apps/gatus/release.yaml
@@ -74,7 +74,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
-            # - "[BODY] == "pat(*<title>Homepage</title>*)"
+            - "[BODY] == pat(*<title>Homepage</title>*)"
           alerts:
             - type: email
               description: "Healthcheck failed"
