fix: Update response time condition value to 100

--- a/clusters/home/apps/gatus/release.yaml
+++ b/clusters/home/apps/gatus/release.yaml
@@ -86,7 +86,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
-            # - "[BODY] == "pat(*<title>Login · FreshRSS</title>*)"
+            - "[BODY] == pat(*<title>Login · FreshRSS</title>*)"
           alerts:
             - type: email
               description: "Healthcheck failed"
@@ -98,8 +98,9 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
-            # - "[BODY] == "pat(*<title>Pacholo Amit | Developer Portfolio 💻</title>*)"
-            # - "[RESPONSE_TIME] < 300"
+            - "[BODY] == pat(*<title>Pacholo Amit | Developer Portfolio 💻</title>*)"
+            - "[RESPONSE_TIME] < 100"
+
           alerts:
             - type: email
               description: "Healthcheck failed"
@@ -111,7 +112,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
-            # - "[BODY] == "pat(*<title>Linkwarden</title>*)"
+            - "[BODY] == pat(*<title>Linkwarden</title>*)"
           alerts:
             - type: email
               description: "Healthcheck failed"
@@ -123,7 +124,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
-            # - "[BODY] == "pat(*<title>n8n.io - Workflow Automation</title>*)"
+            - "[BODY] == pat(*<title>n8n.io - Workflow Automation</title>*)"
           alerts:
             - type: email
               description: "Healthcheck failed"
@@ -135,7 +136,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
-            # - "[BODY] == "pat(*<title page-title>Vaultwarden Web</title>*)"
+            - "[BODY] == pat(*<title page-title>Vaultwarden Web</title>*)"
           alerts:
             - type: email
               description: "Healthcheck failed"
@@ -148,6 +149,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
+            - "[BODY] == pat(*<title page-title>Proxmox Virtual Environment</title>*)"
           alerts:
             - type: email
               description: "Healthcheck failed"
@@ -159,6 +161,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
+            - "[BODY] == pat(*<title page-title>Speedtest Tracker</title>*)"            
           alerts:
             - type: email
               description: "Healthcheck failed"
@@ -181,6 +184,7 @@ spec:
           interval: 60s
           conditions:
             - "[STATUS] == 200"
+            - "[BODY] == pat(*<title page-title>Weave GitOps</title>*)"                 
           alerts:
             - type: email
               description: "Healthcheck failed"
