chore: Update services encryption key and last modified date

--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - longhorn
   - kured 
   - rancher 
+  - reloader
   # - node-problem-detector 
   # - system-upgrade  # Enable for upgrades
   
