--- a/clusters/home/apps/weaveworks-dashboard/ingress.yaml
+++ b/clusters/home/apps/weaveworks-dashboard/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     gethomepage.dev/enabled: "true"
     gethomepage.dev/description: Weave K8s Flux Dashboard
-    gethomepage.dev/group: Infrastructure
+    gethomepage.dev/group: Apps/Services
     gethomepage.dev/icon: https://avatars.githubusercontent.com/u/9976052?s=200&v=4
     gethomepage.dev/name: Weaveworks Dashboard
     gethomepage.dev/pod-selector: app.kubernetes.io/instance=ww-gitops
