--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -15,4 +15,5 @@ resources:
   - wordpress-dev-portfolio
   - freshrss
   - gatus
-  - nextjs-developer-portfolio
+  - pachtop-landing-page
+  # - nextjs-developer-portfolio
