fix: Update deployment.yaml with latest image tag

--- a/clusters/home/apps/pachtop-landing-page/deployment.yaml
+++ b/clusters/home/apps/pachtop-landing-page/deployment.yaml
@@ -30,7 +30,7 @@ spec:
       - name: pachtop-landing-page
         imagePullPolicy: IfNotPresent
         # TODO: Make this dynamic based on latest tag
-        image: ghcr.io/pacholoamit/pacthop-landing-page:7e4a974d7410f8ac0b188daeb04236cb5fea6efc
+        image: ghcr.io/pacholoamit/pacthop-landing-page:latest
         ports:
           - name: web
             containerPort: 3000
