style: comment out descheduler in kustomization.yaml

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - vaultwarden
   - cloudflare
   - weaveworks-dashboard
-  - descheduler
+  # - descheduler
   - speedtest-tracker
   - linkwarden
   - linkstack
