--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - vaultwarden
   - cloudflare
   - weaveworks-dashboard
-  # - descheduler
+  # - descheduler  # Fix this as there is an problem with the policy
   - speedtest-tracker
   - linkwarden
   - linkstack
