--- a/clusters/home/apps/pachtop-landing-page/kustomization.yaml
+++ b/clusters/home/apps/pachtop-landing-page/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: pachtop
 resources:
+  - namespace.yaml
   - deployment.yaml
   - ingress.yaml
