--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -15,5 +15,5 @@ resources:
   - wordpress-dev-portfolio
   - freshrss
   - gatus
-  # - pachtop-landing-page
+  - pachtop
   # - nextjs-developer-portfolio
