--- a/clusters/home/apps/pachtop/kustomization.yaml
+++ b/clusters/home/apps/pachtop/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: pachtop
 resources:
-  - image-update.yaml
   - namespace.yaml
   - deployment.yaml
+  - image.yaml
   - ingress.yaml
